<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".trendingmovies.ui.moviedetails.MovieDetailsFragment">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:fitsSystemWindows="true"
       android:background="@android:color/transparent">
       <com.google.android.material.appbar.CollapsingToolbarLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fitsSystemWindows="true"
           app:layout_scrollFlags="scroll|exitUntilCollapsed">

           <ImageView
               android:id="@+id/ivBackDrop"
               android:adjustViewBounds="true"
               android:fitsSystemWindows="true"
               app:layout_collapseMode="parallax"
               android:src="@drawable/ic_baseline_spa_24"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               tools:ignore="ContentDescription" />

           <ImageView
               android:id="@+id/ivBack"
               android:src="@drawable/ic_baseline_arrow_back_24"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/standerd"
               android:padding="@dimen/standerd_half"
               android:background="@drawable/ripple_back_icon"
               tools:ignore="ContentDescription" />

       </com.google.android.material.appbar.CollapsingToolbarLayout>

   </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standerd"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_account_circle_24"/>

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/standerd_half"
                    android:layout_toEndOf="@id/ivPoster">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stander_fordd"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGeners"
                        android:layout_marginTop="@dimen/standerd_quart"
                        android:layout_marginBottom="@dimen/standerd_quart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_crime"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvRuntime"
                            android:layout_marginTop="@dimen/standerd_quart"
                            android:layout_marginBottom="@dimen/standerd_quart"
                            android:drawableStart="@drawable/ic_baseline_access_time_24"
                            android:drawablePadding="@dimen/standerd_quart"
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_200_min"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_marginTop="@dimen/standerd_quart"
                            android:layout_marginBottom="@dimen/standerd_quart"
                            android:layout_marginStart="@dimen/standerd"
                            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                            android:drawablePadding="@dimen/standerd_quart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20_01_2021"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/ivRating"
                            android:theme="@style/Theme.AppCompat.RatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:rating="3.5"
                            style="?attr/ratingBarStyleSmall"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvVoteCount"
                            android:layout_marginTop="@dimen/standerd_quart"
                            android:layout_marginBottom="@dimen/standerd_quart"
                            android:layout_marginStart="@dimen/standerd_half"
                            android:drawableEnd="@drawable/ic_baseline_people_24" android:layout_width="wrap_content"
                            android:drawablePadding="@dimen/standerd_half"
                            android:gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:text="@string/_2000"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_marginTop="@dimen/standerd"
                android:layout_marginBottom="@dimen/standerd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:text="dfgfdgfgdfgfdg u9irfbvhjpihds ihbjs[pdofhils p9uoihjbophiyih 8t98gubjlewhfe ju9oreihgbrelgoihegrh o8ryehgrihe"
                android:layout_marginTop="@dimen/standerd"
                android:layout_marginBottom="@dimen/standerd"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_loading"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>